Fix footer logo stretch: add align-self flex-start

--- a/src/components/Footer.module.css
+++ b/src/components/Footer.module.css
@@ -21,6 +21,7 @@
   height: 44px;
   width: auto;
   display: block;
+  align-self: flex-start;
 }
 
 .tagline {
